them addmon va bang hien thi danh sach dat ban

--- a/myshop/src/index.html
+++ b/myshop/src/index.html
@@ -17,8 +17,9 @@
 
 </head>
 <body>
-  <app-root></app-root>
 
+  <app-root></app-root>
+  <app-home></app-home>
   <script src="js/jquery.min.js"></script>
   <script src="plugin/OwlCarousel2-2.3.4/dist/owl.carousel.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
